--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1661,6 +1661,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -22977,9 +22980,10 @@ then click this button.</property>
                                                             </child>
                                                             <child>
                                                             <widget class="GtkCheckButton" id="checkbutton_encoder_analyze_side_share_x">
-                                                            <property name="label" translatable="yes">Share X axis</property>
+                                                            <property name="label" translatable="yes">Same X scale</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
+                                                            <property name="active">True</property>
                                                             <property name="draw_indicator">True</property>
                                                             <signal name="toggled" handler="on_checkbutton_encoder_analyze_side_share_x_toggled" swapped="no"/>
                                                             </widget>
@@ -23976,6 +23980,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
