Encoder analyze can be cancelled

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1676,6 +1676,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -23162,9 +23165,9 @@ then click this button.</property>
                                                             <property name="has_tooltip">True</property>
                                                             <property name="tooltip" translatable="yes">Cancel process</property>
                                                             <property name="use_underline">True</property>
-                                                            <signal name="clicked" handler="on_button_encoder_cancel_clicked" swapped="no"/>
+                                                            <signal name="clicked" handler="on_button_encoder_analyze_cancel_clicked" swapped="no"/>
                                                             <child>
-                                                            <widget class="GtkImage" id="image26">
+                                                            <widget class="GtkImage" id="image_encoder_analyze_cancel">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="stock">gtk-cancel</property>
@@ -24617,6 +24620,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
