Added translatable strings

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1691,6 +1691,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -15874,7 +15877,7 @@ Concentric</property>
                                                             <widget class="GtkLabel" id="label340">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Options</property>
+                                                            <property name="label" translatable="yes">Options</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -15919,7 +15922,7 @@ Concentric</property>
                                                             <widget class="GtkLabel" id="label342">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Recalculate</property>
+                                                            <property name="label" translatable="yes">Recalculate</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -24736,6 +24739,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
