--- a/glade/encoder_overview.glade
+++ b/glade/encoder_overview.glade
@@ -38,7 +38,7 @@
               <widget class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label">Sets</property>
+                <property name="label" translatable="yes">Sets</property>
               </widget>
               <packing>
                 <property name="tab_fill">False</property>
@@ -66,7 +66,7 @@
               <widget class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label">Repetitions</property>
+                <property name="label" translatable="yes">Repetitions</property>
               </widget>
               <packing>
                 <property name="position">1</property>
