--- a/glade/preferences_win.glade
+++ b/glade/preferences_win.glade
@@ -3245,7 +3245,7 @@ Other</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label">Not recommended</property>
+                                    <property name="label" translatable="yes">Not recommended</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
