--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -4344,7 +4344,7 @@
                       <widget class="GtkLabel" id="label27">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label">Configure rhythm</property>
+                        <property name="label" translatable="yes">Configure rhythm</property>
                         <property name="use_markup">True</property>
                       </widget>
                       <packing>
