--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -11846,7 +11846,7 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label">Current:</property>
+                                                            <property name="label" translatable="yes">Current:</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -11897,7 +11897,7 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label">Max:</property>
+                                                            <property name="label" translatable="yes">Max:</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -11948,7 +11948,7 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label">Min:</property>
+                                                            <property name="label" translatable="yes">Min:</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
